--- a/tools/clang-format/CMakeLists.txt
+++ b/tools/clang-format/CMakeLists.txt
@@ -19,7 +19,8 @@ if( LLVM_USE_SANITIZE_COVERAGE )
   add_subdirectory(fuzzer)
 endif()
 
-install(TARGETS clang-format RUNTIME DESTINATION bin)
+install(TARGETS clang-format EXPORT clang-format-targets RUNTIME DESTINATION bin)
+install(EXPORT clang-format-targets DESTINATION bin/cmake)
 install(PROGRAMS clang-format-bbedit.applescript DESTINATION share/clang)
 install(PROGRAMS clang-format-diff.py DESTINATION share/clang)
 install(PROGRAMS clang-format-sublime.py DESTINATION share/clang)
